--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,19 +19,19 @@ find_package(Qt6 REQUIRED COMPONENTS
 
 qt_standard_project_setup()
 
-
-
 set(APP_SOURCES
-    main.cpp
-    databasemanager.cpp
-    termin.cpp
-    dayModel.cpp
-    oneday.cpp
-    daymanager.cpp
-    folder.cpp
+    src/main.cpp
+    src/managers/databasemanager.cpp
+    src/entities/termin.cpp
+    src/models/daymodel.cpp
+    src/entities/oneday.cpp
+    src/managers/daymanager.cpp
+    src/entities/folder.cpp
+
+    src/entities/user.cpp
+    src/entities/myday.cpp
 )
 
-# Все QML-файлы в одном списке
 set(QML_FILES
     main.qml
     components/OneDay.qml
@@ -60,11 +60,21 @@ qt_add_qml_module(QmlApp
     QML_FILES ${QML_FILES}
     RESOURCES resources.qrc
     SOURCES
-        user.h user.cpp
-        myday.h myday.cpp
-        folder.h folder.cpp
-        databasemanager.h databasemanager.cpp
-        QML_FILES components/ListOfFolderTermins.qml
+        include/entities/user.h src/entities/user.cpp
+        include/entities/myday.h src/entities/myday.cpp
+        include/entities/folder.h src/entities/folder.cpp
+        include/managers/databasemanager.h src/managers/databasemanager.cpp
+        include/entities/termin.h src/entities/termin.cpp
+        include/models/daymodel.h src/models/daymodel.cpp
+        include/entities/oneday.h src/entities/oneday.cpp
+        include/managers/daymanager.h src/managers/daymanager.cpp
+)
+
+target_include_directories(QmlApp PRIVATE
+    include
+    include/entities
+    include/managers
+    include/models
 )
 
 target_link_libraries(QmlApp PRIVATE
@@ -83,4 +93,19 @@ if(WIN32)
         gdi32
         shell32
     )
+
+
 endif()
+# Установка
+install(TARGETS QmlApp DESTINATION bin)
+install(FILES "images/favicon.ico" DESTINATION share/icons)
+
+# Поддержка CPack
+include(CPack)
+
+set(CPACK_GENERATOR "NSIS")
+set(CPACK_PACKAGE_NAME "QmlApp")
+set(CPACK_PACKAGE_VERSION "1.0.0")
+set(CPACK_PACKAGE_DESCRIPTION "Описание вашего приложения")
+set(CPACK_PACKAGE_VENDOR "Ваше имя или компания")
+set(CPACK_PACKAGE_EXECUTABLES "QmlApp" "My Application")
